Basic_Python_assgnt1.ipynb

--- a/Basic_Python_assgnt1.ipynb
+++ b/Basic_Python_assgnt1.ipynb
@@ -129,7 +129,7 @@
         "\n",
         "Q12. How does elif statement work?\n",
         "\n",
-        "A12. The elif statement is used in combination with if statement when there are multiple conditions to be tested.\n",
+        "A12. The elif statement is used in combination with if statement when there are multiple conditions to be tested and ends with else statement.\n",
         "\n",
         "if condition1:\n",
         "  Code block for condition1\n",
