Basic_Python_assgnt1.ipynb

--- a/Basic_Python_assgnt1.ipynb
+++ b/Basic_Python_assgnt1.ipynb
@@ -440,7 +440,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#For Mutable arguments- String,\n",
+        "#For Immutable arguments- String,\n",
         "\n",
         "a=\"Warld\" #before modification\n",
         "a"
