--- a/Functions_assgn3.ipynb
+++ b/Functions_assgn3.ipynb
@@ -73,7 +73,7 @@
         "def sqr(x):  # x is a parameter            \n",
         "    return x**2\n",
         "\n",
-        "Arguments are the values supplied to the function when it is called. There are default arguments, variable length arguments and keyword arguments.\n",
+        "Arguments are the values supplied to the function when it is called. There are also default arguments, variable length arguments and keyword arguments.\n",
         "\n",
         "example-  \n",
         "a. default arg:\n",
